修改随机码生成方法的Object为string