@@ -5,13 +5,12 @@
 package top.abeille.common.basic;
 
 import java.time.LocalDate;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
 public class AbstractBasicService {
 
-    private static List<String> list = Arrays.asList("0", "1", "2", "3", "4", "5", "6", "7", "8", "9",
+    private static List<String> list = List.of("0", "1", "2", "3", "4", "5", "6", "7", "8", "9",
             "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P",
             "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z");
 
@@ -34,8 +33,8 @@ public class AbstractBasicService {
     private String generateRandom() {
         Collections.shuffle(list);
         StringBuilder sb = new StringBuilder();
-        for (Object o : list) {
-            sb.append(o);
+        for (String s : list) {
+            sb.append(s);
         }
         return sb.toString().substring(5, 9);
     }
